# doorbell

./: .gitignore  README.md  default.nix  doorbell.cabal  nixpkgs.json  release.nix  shell.nix  stack.yaml  watcher.cabal
nix/: doorbell.nix
src/: Main.hs
