name:                doorbell
version:             0.1.0.0
-- synopsis:
-- description:
license:             MPL-2.0
license-file:        LICENSE
author:              Sean Parsons
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable doorbell
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.12,
                       time,
                       transformers,
                       process,
                       text,
                       http-client,
                       http-types,
                       blaze-builder,
                       resourcet,
                       http-client-tls,
                       bytestring,
                       old-locale,
                       async,
                       file-embed,
                       temporary
  ghc-options:         -O3 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010
